@startuml
skinparam backgroundColor white
skinparam shadowing false
skinparam defaultFontName Arial
skinparam defaultFontSize 16
skinparam dpi 160
skinparam monochrome true
skinparam classAttributeIconSize 0
hide circle
hide empty members
top to bottom direction
class UMLDiagram
class UMLClass
class UMLRelationship {
+id: str
+type: RelationshipType
+name: str [0..1]
+to_dict(): dict
}
class RelationshipEnd {
+class_id: str
+role: str [0..1]
+multiplicity: str
+navigable: bool
}
enum RelationshipType {
ASSOCIATION
AGGREGATION
COMPOSITION
GENERALIZATION
REALIZATION
DEPENDENCY
}
UMLDiagram "1" --> "0..*" UMLRelationship : relationships
UMLDiagram "1" --> "0..*" UMLClass : classes
UMLRelationship "1" --> "1" RelationshipEnd : source
UMLRelationship "1" --> "1" RelationshipEnd : target
UMLRelationship --> RelationshipType : type
RelationshipEnd ..> UMLClass : resuelve class_id
note bottom of RelationshipEnd
class_id es una referencia lógica.
El validador debe comprobar
que el extremo exista.
end note
@enduml
